...
        )
        when (sessionState) {
            is SessionState.SignedIn ->
                IconButton(
                    modifier =
                        Modifier
                            .testTag("create-page-button")
                            .semantics { contentDescription = "New page" },
                    onClick = onCreatePage,
                ) {
                    Icon(Icons.Outlined.Add, contentDescription = null)
                }
            SessionState.Loading -> Unit
...
